# cargo2nix

./: .direnvrc  .envrc  .gitattributes  .gitignore  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.nix  Cargo.toml  LICENSE  README.md  crate.nix  default.nix  deps.nix  flake.nix  nixpkgs.nix  shell.nix
.circleci/: config.yml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yaml  issues-and-help.md
.github/PULL_REQUEST_TEMPLATE/: pr.md
.github/workflows/: changelog.yml  check-changelog.sh  ci.yml
examples/: README.md
examples-flakes/1-hello-world/: Cargo.toml  README.md  flake.nix
examples-flakes/2-alternative-rust-overlay/: .gitignore  README.md  flake.nix
examples/1-hello-world/: Cargo.nix  Cargo.toml  README.md  default.nix  flake.nix
examples/2-bigger-project/: Cargo.nix  Cargo.toml  README.md  default.nix  flake.nix
overlay/: build-rust-packages.nix  clean-local-src.nix  crate-def-module.nix  crate-instance.nix  crate-module.nix  crate.nix  crates-io-registry.nix  default.nix  directory-source.nix  features.nix  json2toml.nix  lib.nix  local-registry.nix  make-package-set.nix  make-shell.nix  mkcrate-nobuild.nix  mkcrate-utils.sh  mkcrate.nix  overrides.nix  parse-cfg.nix  real-host-triple.nix  resolve-features.nix  resolve-request.nix  run-tests.nix  toml2json.nix  utils.sh  workspace-shell.nix
src/: ast.rs  codegen.rs  default.nix  expr.rs  fmt_ext.rs  http_crate.rs  lib.rs  main.rs  manifest.rs  metadata.rs  platform.rs  resolve.rs  serializer.rs  template.rs
templates/: Cargo.nix.tera
(+43 files in other folders)
