[package]
name = "cargo2nix"
version = "0.11.0"
edition = "2021"
license = "MIT"

[dependencies]
cargo = "0.61.1"
cargo-platform = "0.1.2"
colorify = "0.2.3"
anyhow = { version = "1.0.57", features = ["backtrace"] }
pathdiff = "0.2.1"
semver = "1.0.9"
serde = { version = "1.0.137", features = ["derive"] }
tempfile = "3.3.0"
tera = { version = "1.15.0", default-features = false }
toml = "0.5.9"
