[package]
name = "cargo2nix"
version = "0.11.0"
edition = "2021"
license = "MIT"

[dependencies]
cargo = "0.65.0"
cargo-platform = "0.1.2"
clap = { version = "4.0", features = ["derive"] }
clap_complete = { version = "4.0" }
colorify = "0.2.3"
anyhow = { version = "1.0.65", features = ["backtrace"] }
pathdiff = "0.2.1"
semver = "1.0.14"
serde = { version = "1.0.145", features = ["derive"] }
sha2 = "0.10.6"
tempfile = "3.3.0"
tera = { version = "1.17.1", default-features = false }
toml = "0.5.9"
