[package]
edition = "2021"
license = "MIT"
name = "cargo2nix"
version = "0.11.0"

[dependencies]
anyhow = {version = "1.0.75", features = ["backtrace"]}
cargo = "0.86.0"
cargo-platform = "0.2.0"
clap = {version = "4.4.6", features = ["derive"]}
clap_complete = {version = "4.4.3"}
colorify = "0.2.3"
pathdiff = "0.2.1"
semver = "1.0.20"
serde = {version = "1.0.189", features = ["derive"]}
sha2 = "0.10.8"
tempfile = "3.8.0"
tera = {version = "1.19.1", default-features = false}
toml = "0.8.2"
